correção submit form

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <!-- BTN-SUBMIT -->
         <div id="box-footer">
-          <button id="buttonSubmit">Enviar</button>
+          <button type="submit" id="buttonSubmit">Enviar</button>
         </div>
       </form>
     </div>
