change name function stickersQtdValidation

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									</svg>
 								</button>
 
-								<input onchange="testes()" type="number" name="stickersQtd" id="stickersQtd" placeholder="0" />
+								<input onchange="stickersQtdValidation()" type="number" name="stickersQtd" id="stickersQtd" placeholder="0" />
 
 								<button id="buttonAdd" aria-label="diminuir">
 									<svg class="button-icon" xmlns="http://www.w3.org/2000/svg" width="42" height="42">
